[tool.poetry]
name = "highlights"
version = "1.0.0"
description = "Development dependencies for Python projects"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.6.5"
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
flake8-alfred = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip= ["web", "tmp", "firebase"]