[tool.poetry]
name = "highlights"
version = "1.0.0"
description = "Development dependencies for Python projects"
authors = ["Sawyer <git@sawyerh.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
flake8 = "^7.0.0"
flake8-alfred = "^1.1.1"
flake8-bugbear = "^24.0.0"
isort = "^5.12.0"
pandas-vet = "^2023.0.0"
setuptools = "^72.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip= ["web", "tmp", "firebase"]