[project]
name = "highlights-search"
version = "0.1.0"
description = "Semantic search for my reading highlights"

[tool.poetry]
name = "highlights-search"
version = "0.1.0"
description = "Semantic search for my highlights"
authors = ["Sawyer <git@sawyerh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
boto3 = "1.26.90"
pandas = "^2.0.3"
numpy = "^1.25.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.19.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
